objects/Cloud_Billing_Log__c.object
<CustomObject>
    <description>Logs related to Billing (Formerly Cloud Billing)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Cloud_Billing_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AsyncApexJob_Id__c</fullName>
        <label>AsyncApexJob Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>GCR_Content_Document_Detail__c</referenceTo>
        <relationshipName>Cloud_Billing_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions__c</fullName>
        <label>Exceptions</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <description>Cloud Billing. Any info this log needs to capture.</description>
        <inlineHelpText>Cloud Billing. Any info this log needs to capture.</inlineHelpText>
        <label>Info</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <description>Cloud Billing. Information on any Options sent to the processing</description>
        <inlineHelpText>Cloud Billing. Information on any Options sent to the processing</inlineHelpText>
        <label>Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Cloud_Billing_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If there is a parent Job Log that spawned this job, reference to that job.</description>
        <inlineHelpText>If there is a parent Job Log that spawned this job, reference to that job.</inlineHelpText>
        <label>Parent Cloud Billing Log</label>
        <referenceTo>Cloud_Billing_Log__c</referenceTo>
        <relationshipName>Cloud_Billing_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing 
Status of the activity if appropriate</description>
        <inlineHelpText>Status of the activity if appropriate</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing
Type of Activity this Log is tracking</description>
        <inlineHelpText>Type of Activity this Log is tracking</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rating</fullName>
                </value>
                <value>
                    <fullName>Re-Rate</fullName>
                </value>
                <value>
                    <fullName>Monthly Order Creation</fullName>
                </value>
                <value>
                    <fullName>Monthly Invoice Creation</fullName>
                </value>
                <value>
                    <fullName>Invoice Email Distribution</fullName>
                </value>
                <value>
                    <fullName>Reconcile</fullName>
                </value>
                <value>
                    <fullName>Populate Garn</fullName>
                </value>
                <value>
                    <fullName>SureTax Processing</fullName>
                </value>
                <value>
                    <fullName>Order Creation Manual</fullName>
                </value>
                <value>
                    <fullName>SureTax Request</fullName>
                </value>
                <value>
                    <fullName>SureTax Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cloud_Billing_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <columns>Time__c</columns>
        <columns>Type__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Exceptions__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LOG_000983</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>User__c</columns>
        <columns>Time__c</columns>
        <columns>Type__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>LOG-060933</value>
        </filters>
        <label>LOG-060933</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Monthly_Order_and_Invoice</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>User__c</columns>
        <columns>Time__c</columns>
        <columns>Type__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Monthly Order Creation,Monthly Invoice Creation</value>
        </filters>
        <label>Monthly Order and Invoice</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rerates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>User__c</columns>
        <columns>Time__c</columns>
        <columns>Type__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Re-Rate</value>
        </filters>
        <label>Rerates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rerates_10_2017</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>User__c</columns>
        <columns>Time__c</columns>
        <columns>Type__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Re-Rate</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>Month__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>Rerates 10 2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Submitted</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <columns>Time__c</columns>
        <columns>Type__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Exceptions__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Submitted</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Billing Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>